--- a/src/components/Home/HomeCardList/HomeCardList.css
+++ b/src/components/Home/HomeCardList/HomeCardList.css
@@ -2,6 +2,10 @@
   font-family: 'Kanit', sans-serif;
 }
 
+.card-img-top {
+  border-radius: 20px;
+}
+
 .card:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease;
